Conclusão de Trabalho Prático da 1ªSemana

--- a/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/projetos.html
+++ b/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/projetos.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos | Aylmer Bolzan</title>
 </head>
+
 <body>
     <img src="img/header.svg" alt="Aylmer Bolzan">
         <hr>
 
-    <p>
+    <nav>
         <a href="index.html"><strong>Principal</strong></a> :: 
         <a href="quemsou.html"><strong>Quem Sou</strong></a> :: 
         <a href="projetos.html"><strong><i>Projetos</i></strong></a> :: 
         <a href="contato.html"><strong>Contato</strong></a>
-    </p>
+    </nav>
 
         <hr>
 <h1>Confira alguns projetos:</h1>
 
 <table>
-
-<td><a href="https://www.goldclube.com" target="_blank"><img src="img/projeto1.png" width="315" alt="GoldClube.com"></a></td>
-<td><a href="https://www.bioage.com.br" target="_blank"><img src="img/projeto2.png" width="315" alt="Bioage.com.br"></a></td>
-<td><a href="https://www.cpaps.com.br" target="_blank"><img src="img/projeto3.png" width="315" alt="CPAPS.com.br"></a></td>
-
+    <tr>
+        <td><a href="https://www.goldclube.com" target="_blank"><img src="img/projeto1.png" width="315" alt="GoldClube.com"></a></td>
+        <td><a href="https://www.bioage.com.br" target="_blank"><img src="img/projeto2.png" width="315" alt="Bioage.com.br"></a></td>
+        <td><a href="https://www.cpaps.com.br" target="_blank"><img src="img/projeto3.png" width="315" alt="CPAPS.com.br"></a></td>
+    </tr>
 </table>
-
-
-
-
-
 
         <hr>
 
-
         <p>Copyright &copy; 2022</p>
 
-        <a href="https://www.ifes.edu.br" target="_blank"><img src="/Trabalho Prático da 1ª Semana/img/ifes.png" width="50" alt="IFES"></a>
+        <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
 
 </body>
 </html>
