--- a/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/index.html
+++ b/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal | Aylmer Bolzan</title>
 </head>
+
 <body>
     <img src="img/header.svg" alt="Aylmer Bolzan">
         <hr>
 
-    <p>
+    <nav>
         <a href="index.html"><strong><i>Principal</i></strong></a> :: 
         <a href="quemsou.html"><strong>Quem Sou</strong></a> :: 
         <a href="projetos.html"><strong>Projetos</strong></a> :: 
         <a href="contato.html"><strong>Contato</strong></a>
-    </p>
+    </nav>
 
         <hr>
 <h2>Olá, eu sou</h2>
 <h1>Aylmer Bolzan</h1>
 
-<a href="https://www.linkedin.com/in/aylmerbolzan/">
-    <img src="/Trabalho Prático da 1ª Semana/img/perfil.png" width="225" alt="LinkedIn - Aylmer Bolzan"></a>
+<a href="https://www.linkedin.com/in/aylmerbolzan/" target="_blank">
+    <img src="img/perfil.png" width="225" alt="LinkedIn - Aylmer Bolzan"></a>
     
 <h2>
     <i>Um profissional apaixonado por e-commerce, adquirindo novas skills.</i>
@@ -32,24 +33,23 @@
 <h2>Confira o que você encontrará aqui:</h2>
 
 <dl>
-    <a href="index.html"><dt><strong>Principal</strong></dt></a>
+    <dt><a href="index.html"><strong>Principal</strong></a></dt>
         <dd>Seja bem-vindo! Você está aqui, na página Principal.</dd>
 
-    <a href="quemsou.html"><dt><strong>Quem Sou</strong></dt></a>
+    <dt><a href="quemsou.html"><strong>Quem Sou</strong></a></dt>
         <dd>Um pouco mais sobre meus conhecimentos e habilidades.</dd>
 
-    <a href="projetos.html"><dt><strong>Projetos</strong></dt></a>
+    <dt><a href="projetos.html"><strong>Projetos</strong></a></dt>
         <dd>Por onde andei, diz bem sobre mim. Veja alguns projetos que colaborei.</dd>
 
-    <a href="contato.html"><dt><strong>Contato</strong></dt></a>
+    <dt><a href="contato.html"><strong>Contato</strong></a></dt>
         <dd>Vamos tomar um café? Networking é sempre bem-vindo.</dd>
 </dl>
         <hr>
 
-
         <p>Copyright &copy; 2022</p>
 
-        <a href="https://www.ifes.edu.br" target="_blank"><img src="/Trabalho Prático da 1ª Semana/img/ifes.png" width="50" alt="IFES"></a>
+        <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
 
 </body>
 </html>
