Formatação do layout do código

--- a/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/quemsou.html
+++ b/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/quemsou.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,133 +11,136 @@
 
 <body>
     <img src="img/header.svg" alt="Aylmer Bolzan">
-        <hr>
+    <hr>
 
     <nav>
-        <a href="index.html"><strong>Principal</strong></a> :: 
-        <a href="quemsou.html"><strong><i>Quem Sou</i></strong></a> :: 
-        <a href="projetos.html"><strong>Projetos</strong></a> :: 
+        <a href="index.html"><strong>Principal</strong></a> ::
+        <a href="quemsou.html"><strong><i>Quem Sou</i></strong></a> ::
+        <a href="projetos.html"><strong>Projetos</strong></a> ::
         <a href="contato.html"><strong>Contato</strong></a>
     </nav>
 
-        <hr>
+    <hr>
 
-<h1>Aylmer Bolzan</h1>
-<h4>Designer e Desenvolvedor Web</h4>
+    <h1>Aylmer Bolzan</h1>
+    <h4>Designer e Desenvolvedor Web</h4>
 
-<br>
+    <br>
 
-<h2>Habilidades</h2>
+    <h2>Habilidades</h2>
 
-<table>
-    <tr>
-        <td>
-            <p>HTML<br>
-            <progress value="2.5" max="5"></progress>
-            </p>
+    <table>
+        <tr>
+            <td>
+                <p>HTML<br>
+                    <progress value="2.5" max="5"></progress>
+                </p>
 
-            <p>CSS<br>
-            <progress value="1.2" max="5"></progress>
-            </p>
+                <p>CSS<br>
+                    <progress value="1.2" max="5"></progress>
+                </p>
 
-            <p>Javascript<br>
-            <progress value="0.3" max="5"></progress>
-            </p>
+                <p>Javascript<br>
+                    <progress value="0.3" max="5"></progress>
+                </p>
 
-            <p>Node.js<br>
-            <progress value="0" max="5"></progress>
-            </p>
-        </td>
-        <td>
-            <p>Photoshop<br>
-            <progress value="4.5" max="5"></progress>
-            </p>
+                <p>Node.js<br>
+                    <progress value="0" max="5"></progress>
+                </p>
+            </td>
+            <td>
+                <p>Photoshop<br>
+                    <progress value="4.5" max="5"></progress>
+                </p>
 
-            <p>Illustrator<br>
-            <progress value="2.2" max="5"></progress>
-            </p>
+                <p>Illustrator<br>
+                    <progress value="2.2" max="5"></progress>
+                </p>
 
-            <p>Premiere<br>
-            <progress value="2" max="5"></progress>
-            </p>
+                <p>Premiere<br>
+                    <progress value="2" max="5"></progress>
+                </p>
 
-            <p>After Effects<br>
-            <progress value="0.1" max="5"></progress>
-            </p>
-        </td>
-        <td>
-            <p>Google Ads<br>
-            <progress value="3" max="5"></progress>
-            </p>
+                <p>After Effects<br>
+                    <progress value="0.1" max="5"></progress>
+                </p>
+            </td>
+            <td>
+                <p>Google Ads<br>
+                    <progress value="3" max="5"></progress>
+                </p>
 
-            <p>Facebook Ads<br>
-            <progress value="2.8" max="5"></progress>
-            </p>
+                <p>Facebook Ads<br>
+                    <progress value="2.8" max="5"></progress>
+                </p>
 
-            <p>Taboola Ads<br>
-            <progress value="1" max="5"></progress>
-            </p>
+                <p>Taboola Ads<br>
+                    <progress value="1" max="5"></progress>
+                </p>
 
-            <p>Pinterest Ads<br>
-            <progress value="0.3" max="5"></progress>
-            </p>
-        </td>
-    </tr>
-</table>
+                <p>Pinterest Ads<br>
+                    <progress value="0.3" max="5"></progress>
+                </p>
+            </td>
+        </tr>
+    </table>
 
-<br>  
+    <br>
 
-<h2>Experiência Profissional</h2>
+    <h2>Experiência Profissional</h2>
 
-<dl>
-    <dt><strong>CMO | <a href="https://www.goldclube.com" target="_blank">GoldClube.com</a></strong></dt>
+    <dl>
+        <dt><strong>CMO | <a href="https://www.goldclube.com" target="_blank">GoldClube.com</a></strong></dt>
         <dd>&#x1f4c5; 2021 - 2022</dd>
-</dl>
-        <ul>
-            <li>Criação de otimização de landing pages</li>
-            <li>Implantação de automação de atendimento e email marketing</li>
-            <li>Implantação de CRM e processos de atendimento</li>
-        </ul>
-<dl>
-    <dt><strong>Coordenador de E-commerce | <a href="https://www.cpaps.com.br" target="_blank">CPAPS.com.br</a></strong></dt>
+    </dl>
+    <ul>
+        <li>Criação de otimização de landing pages</li>
+        <li>Implantação de automação de atendimento e email marketing</li>
+        <li>Implantação de CRM e processos de atendimento</li>
+    </ul>
+    <dl>
+        <dt><strong>Coordenador de E-commerce | <a href="https://www.cpaps.com.br"
+                    target="_blank">CPAPS.com.br</a></strong></dt>
         <dd>&#x1f4c5; 2017 - 2021</dd>
-</dl>
-        <ul>
-            <li>Gestão de equipe de Marketing interna e externa</li>
-            <li>Planejamento de campanhas de aquisição e retenção</li>
-            <li>Análise e acompanhamento do mercado</li>
-        </ul>
-<dl>
-    <dt><strong>Gerente de Marketing | <a href="https://www.bioage.com.br" target="_blank">Bioage Skincare Solution</a></strong></dt>
-            <dd>&#x1f4c5; 2016 - 2017</dd>
-</dl>
-            <ul>
-                <li>Implantação do e-commerce</li>
-                <li>Gestão das campanhas de tráfego pago</li>
-                <li>Desenvolvimento e realização de workshops e eventos</li>
-            </ul>
+    </dl>
+    <ul>
+        <li>Gestão de equipe de Marketing interna e externa</li>
+        <li>Planejamento de campanhas de aquisição e retenção</li>
+        <li>Análise e acompanhamento do mercado</li>
+    </ul>
+    <dl>
+        <dt><strong>Gerente de Marketing | <a href="https://www.bioage.com.br" target="_blank">Bioage Skincare
+                    Solution</a></strong></dt>
+        <dd>&#x1f4c5; 2016 - 2017</dd>
+    </dl>
+    <ul>
+        <li>Implantação do e-commerce</li>
+        <li>Gestão das campanhas de tráfego pago</li>
+        <li>Desenvolvimento e realização de workshops e eventos</li>
+    </ul>
 
 
 
-<h2>Idiomas</h2>
+    <h2>Idiomas</h2>
 
     <p>Português<br>
         <progress value="5" max="5"></progress>
-        </p>
+    </p>
 
     <p>Inglês<br>
-    <progress value="3" max="5"></progress>
+        <progress value="3" max="5"></progress>
     </p>
 
     <p>Espanhol<br>
-    <progress value="1.5" max="5"></progress>
+        <progress value="1.5" max="5"></progress>
     </p>
 
-        <hr>
+    <hr>
 
-        <p>Copyright &copy; 2022</p>
+    <p>Copyright &copy; 2022</p>
 
-        <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
+    <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
 
 </body>
+
 </html>
