--- a/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/index.html
+++ b/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,47 +11,48 @@
 
 <body>
     <img src="img/header.svg" alt="Aylmer Bolzan">
-        <hr>
+    <hr>
 
     <nav>
-        <a href="index.html"><strong><i>Principal</i></strong></a> :: 
-        <a href="quemsou.html"><strong>Quem Sou</strong></a> :: 
-        <a href="projetos.html"><strong>Projetos</strong></a> :: 
+        <a href="index.html"><strong><i>Principal</i></strong></a> ::
+        <a href="quemsou.html"><strong>Quem Sou</strong></a> ::
+        <a href="projetos.html"><strong>Projetos</strong></a> ::
         <a href="contato.html"><strong>Contato</strong></a>
     </nav>
 
-        <hr>
-<h2>Olá, eu sou</h2>
-<h1>Aylmer Bolzan</h1>
+    <hr>
+    <h2>Olá, eu sou</h2>
+    <h1>Aylmer Bolzan</h1>
 
-<a href="https://www.linkedin.com/in/aylmerbolzan/" target="_blank">
-    <img src="img/perfil.png" width="225" alt="LinkedIn - Aylmer Bolzan"></a>
-    
-<h2>
-    <i>Um profissional apaixonado por e-commerce, adquirindo novas skills.</i>
-</h2>
+    <a href="https://www.linkedin.com/in/aylmerbolzan/" target="_blank">
+        <img src="img/perfil.png" width="225" alt="LinkedIn - Aylmer Bolzan"></a>
+
+    <h2>
+        <i>Um profissional apaixonado por e-commerce, adquirindo novas skills.</i>
+    </h2>
     <hr>
 
-<h2>Confira o que você encontrará aqui:</h2>
+    <h2>Confira o que você encontrará aqui:</h2>
 
-<dl>
-    <dt><a href="index.html"><strong>Principal</strong></a></dt>
+    <dl>
+        <dt><a href="index.html"><strong>Principal</strong></a></dt>
         <dd>Seja bem-vindo! Você está aqui, na página Principal.</dd>
 
-    <dt><a href="quemsou.html"><strong>Quem Sou</strong></a></dt>
+        <dt><a href="quemsou.html"><strong>Quem Sou</strong></a></dt>
         <dd>Um pouco mais sobre meus conhecimentos e habilidades.</dd>
 
-    <dt><a href="projetos.html"><strong>Projetos</strong></a></dt>
+        <dt><a href="projetos.html"><strong>Projetos</strong></a></dt>
         <dd>Por onde andei, diz bem sobre mim. Veja alguns projetos que colaborei.</dd>
 
-    <dt><a href="contato.html"><strong>Contato</strong></a></dt>
+        <dt><a href="contato.html"><strong>Contato</strong></a></dt>
         <dd>Vamos tomar um café? Networking é sempre bem-vindo.</dd>
-</dl>
-        <hr>
+    </dl>
+    <hr>
 
-        <p>Copyright &copy; 2022</p>
+    <p>Copyright &copy; 2022</p>
 
-        <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
+    <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
 
 </body>
+
 </html>
