--- a/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/projetos.html
+++ b/Front-End/Módulo 1/1ª Semana/Trabalho Prático da 1ª Semana/projetos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,31 +11,35 @@
 
 <body>
     <img src="img/header.svg" alt="Aylmer Bolzan">
-        <hr>
+    <hr>
 
     <nav>
-        <a href="index.html"><strong>Principal</strong></a> :: 
-        <a href="quemsou.html"><strong>Quem Sou</strong></a> :: 
-        <a href="projetos.html"><strong><i>Projetos</i></strong></a> :: 
+        <a href="index.html"><strong>Principal</strong></a> ::
+        <a href="quemsou.html"><strong>Quem Sou</strong></a> ::
+        <a href="projetos.html"><strong><i>Projetos</i></strong></a> ::
         <a href="contato.html"><strong>Contato</strong></a>
     </nav>
 
-        <hr>
-<h1>Confira alguns projetos:</h1>
+    <hr>
+    <h1>Confira alguns projetos:</h1>
 
-<table>
-    <tr>
-        <td><a href="https://www.goldclube.com" target="_blank"><img src="img/projeto1.png" width="315" alt="GoldClube.com"></a></td>
-        <td><a href="https://www.bioage.com.br" target="_blank"><img src="img/projeto2.png" width="315" alt="Bioage.com.br"></a></td>
-        <td><a href="https://www.cpaps.com.br" target="_blank"><img src="img/projeto3.png" width="315" alt="CPAPS.com.br"></a></td>
-    </tr>
-</table>
+    <table>
+        <tr>
+            <td><a href="https://www.goldclube.com" target="_blank"><img src="img/projeto1.png" width="315"
+                        alt="GoldClube.com"></a></td>
+            <td><a href="https://www.bioage.com.br" target="_blank"><img src="img/projeto2.png" width="315"
+                        alt="Bioage.com.br"></a></td>
+            <td><a href="https://www.cpaps.com.br" target="_blank"><img src="img/projeto3.png" width="315"
+                        alt="CPAPS.com.br"></a></td>
+        </tr>
+    </table>
 
-        <hr>
+    <hr>
 
-        <p>Copyright &copy; 2022</p>
+    <p>Copyright &copy; 2022</p>
 
-        <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
+    <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
 
 </body>
+
 </html>
