Alteração do menu e hero section

--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/contato.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/contato.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Contato | Aylmer Bolzan</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
 </head>
@@ -44,9 +45,15 @@
 
     <hr>
 
-    <p>Copyright &copy; 2022</p>
-
-    <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="50" alt="IFES"></a>
+    <table id="footer">
+        <tr>
+            <td>
+                <p>Copyright &copy; 2022<br>
+                    <a href="https://www.ifes.edu.br" target="_blank"><img src="img/ifes.png" width="90" alt="IFES"></a>
+                </p>
+            </td>
+        </tr>
+    </table>
 
 </body>
 
