--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/index.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/index.html
@@ -13,7 +13,8 @@
 <body>
     <table id="header" cellpadding="5">
         <tr>
-            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="100" class="perfil">
+            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="110"
+                    style="border-radius: 50%;">
             </td>
             <td class="name" height="60">Aylmer Bolzan</td>
         </tr>
@@ -21,26 +22,40 @@
             <td class="description">Domingos Martins - ES</td>
         </tr>
     </table>
-    <hr>
+    <table id="body1" style="border-spacing: 15px;">
+        <tr align="center">
 
-    <nav>
-        <a href="index.html"><strong><i>Principal</i></strong></a> ::
-        <a href="quemsou.html"><strong>Quem Sou</strong></a> ::
-        <a href="projetos.html"><strong>Projetos</strong></a> ::
-        <a href="contato.html"><strong>Contato</strong></a>
-    </nav>
+            <td style="background-color: #333334; border-radius: 15px; color: #fff; text-align: center; padding: 17px;"
+                width="25%">
 
-    <hr>
-    <h2>Olá, eu sou</h2>
-    <h1>Aylmer Bolzan</h1>
+                <strong>Principal</strong>
+            </td>
 
-    <a href="https://www.linkedin.com/in/aylmerbolzan/" target="_blank">
-        <img src="img/perfil.png" width="225" alt="LinkedIn - Aylmer Bolzan"></a>
+            <td width="25%"><a href="quemsou.html" class="amenu"><strong>Quem Sou</strong></a></td>
 
-    <h2>
-        <i>Um profissional apaixonado por e-commerce, adquirindo novas skills.</i>
-    </h2>
-    <hr>
+            <td width="25%"><a href="projetos.html" class="amenu"><strong>Projetos</strong></a></td>
+
+            <td width="25%"><a href="contato.html" class="amenu"><strong>Contato</strong></a></td>
+        </tr>
+        <tr>
+            <td colspan="2" width="50%" class="herosection1">
+                <br>
+                <text>Olá, eu sou</text> <br>
+                <text style="font-family: Open Sans; color:#D4972E; font-weight: bold; font-size: 45px;">Aylmer
+                    Bolzan</text> <br>
+                <text>Um profissional apaixonado por e-commerce, adquirindo novas skills em desenvolvimento.</text> <br>
+                <br>
+                <a href="contato.html"><button class="button">Contate-me!</button></a>
+
+            </td>
+
+            <td colspan="2" width="50%">
+                <a href="https://www.linkedin.com/in/aylmerbolzan/" target="_blank">
+                    <img src="img/imghome.jpg" alt="LinkedIn - Aylmer Bolzan" style="border-radius: 25px;"></a>
+            </td>
+
+        </tr>
+    </table>
 
     <h2>Confira o que você encontrará aqui:</h2>
 
@@ -67,7 +82,11 @@
             </td>
         </tr>
     </table>
-  
+
+
+
+
+
 </body>
 
 </html>
