Menu de navegação da página Quem Sou + Principal

--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/index.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/index.html
@@ -13,7 +13,7 @@
 <body>
     <table id="header" cellpadding="5">
         <tr>
-            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="110"
+            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="120"
                     style="border-radius: 50%;">
             </td>
             <td class="name" height="60">Aylmer Bolzan</td>
@@ -31,14 +31,14 @@
                 <strong>Principal</strong>
             </td>
 
-            <td width="25%"><a href="quemsou.html" class="amenu"><strong>Quem Sou</strong></a></td>
+            <td width="25%"><a href="quemsou.html" class="menu"><strong>Quem Sou</strong></a></td>
 
-            <td width="25%"><a href="projetos.html" class="amenu"><strong>Projetos</strong></a></td>
+            <td width="25%"><a href="projetos.html" class="menu"><strong>Projetos</strong></a></td>
 
-            <td width="25%"><a href="contato.html" class="amenu"><strong>Contato</strong></a></td>
+            <td width="25%"><a href="contato.html" class="menu"><strong>Contato</strong></a></td>
         </tr>
         <tr>
-            <td colspan="2" width="50%" class="herosection1">
+            <td colspan="2" width="50%" class="herosection">
                 <br>
                 <text>Olá, eu sou</text> <br>
                 <text style="font-family: Open Sans; color:#D4972E; font-weight: bold; font-size: 45px;">Aylmer
@@ -53,26 +53,40 @@
                 <a href="https://www.linkedin.com/in/aylmerbolzan/" target="_blank">
                     <img src="img/imghome.jpg" alt="LinkedIn - Aylmer Bolzan" style="border-radius: 25px;"></a>
             </td>
-
+        </tr>
+        <tr>
+            <td colspan="4">
+                <h2 style="white-space: nowrap; font-family: Open Sans; font-size: 23px;">Confira o que você encontrará
+                    aqui:</h2>
+            </td>
         </tr>
     </table>
-
-    <h2>Confira o que você encontrará aqui:</h2>
-
-    <dl>
-        <dt><a href="index.html"><strong>Principal</strong></a></dt>
-        <dd>Seja bem-vindo! Você está aqui, na página Principal.</dd>
-
-        <dt><a href="quemsou.html"><strong>Quem Sou</strong></a></dt>
-        <dd>Um pouco mais sobre meus conhecimentos e habilidades.</dd>
-
-        <dt><a href="projetos.html"><strong>Projetos</strong></a></dt>
-        <dd>Por onde andei, diz bem sobre mim. Veja alguns projetos que colaborei.</dd>
-
-        <dt><a href="contato.html"><strong>Contato</strong></a></dt>
-        <dd>Vamos tomar um café? Networking é sempre bem-vindo.</dd>
-    </dl>
-    <hr>
+    <table id="body2">
+        <tr>
+            <td><a href="index.html"><strong>Principal</strong></a></td>
+            <td colspan="3">
+                <p>Seja bem-vindo! Você está aqui, na página Principal.</p>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="quemsou.html"><strong>Quem Sou</strong></a></td>
+            <td colspan="3">
+                <p>Um pouco mais sobre meus conhecimentos e habilidades.</p>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="projetos.html"><strong>Projetos</strong></a></td>
+            <td colspan="3">
+                <p>Por onde andei, diz bem sobre mim. Veja alguns projetos que colaborei.</p>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="contato.html"><strong>Contato</strong></a></td>
+            <td colspan="3">
+                <p>Vamos tomar um café? Networking é sempre bem-vindo.</p>
+            </td>
+        </tr>
+    </table>
     <table id="footer">
         <tr>
             <td>
@@ -82,10 +96,6 @@
             </td>
         </tr>
     </table>
-
-
-
-
 
 </body>
 
