--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/quemsou.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/quemsou.html
@@ -13,7 +13,8 @@
 <body>
     <table id="header" cellpadding="5">
         <tr>
-            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="100" class="perfil">
+            <td rowspan="2" width="190" align="right"><img src="img/perfil.jpg" alt="Perfil" width="120"
+                    style="border-radius: 50%;">
             </td>
             <td class="name" height="60">Aylmer Bolzan</td>
         </tr>
@@ -21,17 +22,22 @@
             <td class="description">Domingos Martins - ES</td>
         </tr>
     </table>
-    <hr>
+    <table id="body1" style="border-spacing: 15px;">
+        <tr align="center">
 
-    <nav>
-        <a href="index.html"><strong>Principal</strong></a> ::
-        <a href="quemsou.html"><strong><i>Quem Sou</i></strong></a> ::
-        <a href="projetos.html"><strong>Projetos</strong></a> ::
-        <a href="contato.html"><strong>Contato</strong></a>
-    </nav>
+            <td width="25%"><a href="index.html" class="menu"><strong>Principal</strong></a></td>
 
-    <hr>
+            <td style="background-color: #333334; border-radius: 15px; color: #fff; text-align: center; padding: 17px;"
+                width="25%">
 
+                <strong>Quem Sou</strong>
+            </td>
+
+            <td width="25%"><a href="projetos.html" class="menu"><strong>Projetos</strong></a></td>
+
+            <td width="25%"><a href="contato.html" class="menu"><strong>Contato</strong></a></td>
+        </tr>
+        </table>
     <h1>Aylmer Bolzan</h1>
     <h4>Designer e Desenvolvedor Web</h4>
 
