Ajuste em bloco Minibio e Habilidades

--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/quemsou.html
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/quemsou.html
@@ -37,71 +37,56 @@
 
             <td width="25%"><a href="contato.html" class="menu"><strong>Contato</strong></a></td>
         </tr>
-        </table>
-    <h1>Aylmer Bolzan</h1>
-    <h4>Designer e Desenvolvedor Web</h4>
-
-    <br>
-
-    <h2>Habilidades</h2>
-
-    <table>
-        <tr>
-            <td>
-                <p>HTML<br>
-                    <progress value="2.5" max="5"></progress>
-                </p>
-
-                <p>CSS<br>
-                    <progress value="1.2" max="5"></progress>
-                </p>
-
-                <p>Javascript<br>
-                    <progress value="0.3" max="5"></progress>
-                </p>
-
-                <p>Node.js<br>
-                    <progress value="0" max="5"></progress>
-                </p>
-            </td>
-            <td>
-                <p>Photoshop<br>
-                    <progress value="4.5" max="5"></progress>
-                </p>
-
-                <p>Illustrator<br>
-                    <progress value="2.2" max="5"></progress>
-                </p>
-
-                <p>Premiere<br>
-                    <progress value="2" max="5"></progress>
-                </p>
-
-                <p>After Effects<br>
-                    <progress value="0.1" max="5"></progress>
-                </p>
-            </td>
-            <td>
-                <p>Google Ads<br>
-                    <progress value="3" max="5"></progress>
-                </p>
-
-                <p>Facebook Ads<br>
-                    <progress value="2.8" max="5"></progress>
-                </p>
-
-                <p>Taboola Ads<br>
-                    <progress value="1" max="5"></progress>
-                </p>
-
-                <p>Pinterest Ads<br>
-                    <progress value="0.3" max="5"></progress>
-                </p>
-            </td>
-        </tr>
     </table>
 
-    <br>
+    <table id="body2">
+        <tr>
+            <td colspan="6">
+                <h1>Minibio</h1>
+                <p>Trilhando o caminho do varejo digital há 7 anos, desbravando todo o ecosistema que compõe esse fantástico canal, adquiri várias habilidades em minha jornada, além de toda a experiência prática, de ponta a ponta, na operação de um e-commerce: do Contábil à Logística, do Compras ao Comercial ao Pós-Venda.</p>
+
+                   <p> Atualmente tenho meu e-commerce de biocosméticos, SALVIA.eco.br, e trabalho de forma autônoma
+                    ajudando empreendedores a alavancarem suas vendas no digital, partindo desde o absoluto zero.</p>
+
+                   <p>E tem muito mais, hein? Confere minhas experiências e veja se meus conhecimentos se encaixam com o
+                    que você precisa. (;</p>
+
+                  <p>  Gosto de trabalhar com pessoas que têm sangue nos olhos! Reunir a equipe, trocar ideias, distribuir
+                    quem vai fazer o que e... Mão na massa! Depois, apuramos os resultados, citamos os pontos de
+                    aprendizagem e brindamos às conquistas.</p>
+
+                   <p>Vamos tomar um café e conversar mais. Que tal? (:</p>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3"><h2> Habilidades</h2></td>
+            <td colspan="3"><h2>Idiomas</h2></td>
+        </tr>
+        <tr>
+            <td>HTML</td>
+            <td colspan="2" width="40%"><progress value="2.5" max="5" class=""></progress></td>
+            <td>Português</td>
+            <td colspan="2" width="40%"><progress value="5" max="5"></progress></td>
+        </tr>
+        <tr>
+            <td>CSS</td>
+            <td colspan="2"><progress value="1.2" max="5"></progress></td>
+            <td>Inglês</td>
+            <td colspan="2"><progress value="3" max="5"></progress></td>
+        </tr>
+        <tr>
+            <td>JavaScript</td>
+            <td colspan="2"><progress value="0.3" max="5"></progress></td>
+            <td>Espanhol</td>
+            <td colspan="2"><progress value="1.5" max="5"></progress></td>
+        </tr>
+        <tr>
+            <td>Node.JS</td>
+            <td colspan="2"><progress value="0" max="5"></progress></td>
+            <td>Alemão</td>
+            <td colspan="2"><progress value="0" max="5"></progress></td>
+        </tr>
+    </table>
 
     <h2>Experiência Profissional</h2>
 
@@ -137,21 +122,7 @@
 
 
 
-    <h2>Idiomas</h2>
-
-    <p>Português<br>
-        <progress value="5" max="5"></progress>
-    </p>
-
-    <p>Inglês<br>
-        <progress value="3" max="5"></progress>
-    </p>
-
-    <p>Espanhol<br>
-        <progress value="1.5" max="5"></progress>
-    </p>
-
-    <hr>
+    
 
     <table id="footer">
         <tr>
@@ -163,6 +134,23 @@
         </tr>
     </table>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
+
